testsuite/tests/rename/should_fail/T5892b.stderr

T5892b.hs:11:7: error:
    Not in scope: ‘T5892b.subForest’
    No module named ‘T5892b’ is imported.
